# polymarket-btc-microstructure-2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: frozen_policy_thresholds.yaml  gbdt_distributional_costaware_v1.json  vnext_architecture_gates_v1.json
data/samples/: README.md
docs/: 01_sistema_de_datos.md  02_contrato_de_datos.md  03_eda.md  04_splits_validacion_temporal.md  05_target_y_features.md  06_cierre_baselines.md  07_stress_de_latencia.md  08_latencia_real_medida.md  09_modelos_latency_aware.md  10_secuencias_y_orderbook.md  11_correccion_score_adverse.md  12_protocolo_oof_estricto.md  13_seleccion_multihorizonte.md  14_especialista_prestart_h60.md  15_vol_gate.md  16_validacion_fresh.md  17_experimentos_regimen_no_go.md  18_paper_shadow.md
notebooks/: 00_eda_unificado.ipynb  01_splits_y_validacion.ipynb  02_target_y_features.ipynb  03_baseline_h16.ipynb  04_stress_de_latencia.ipynb  05_secuencias_orderbook.ipynb  06_correccion_adverse.ipynb  07_especialista_prestart.ipynb
reports/: README.md  memoria.tex  presentacion.tex
reports/memoria/: main.tex  settings.tex  thesisDetails.tex  thesisRefs.bib
results/: README.md  decision_register.csv  final_candidate_actions_anonymized.csv  final_candidate_summary.csv  key_results.csv
scripts/experiments/: baseline_laware_v01_model_runner.py  baseline_laware_v02_trade_diagnostics.py  baseline_v03_dataset_contract.py  baseline_v03_model_runner.py  baseline_v03d_execution_stress.py  book_only_conv1d_baseline_v1.py  (+15 more)
sql/: core_training_base.sql
tests/: test_policy_and_gates.py
(+25 files in other folders)
